# ByteTrace

./: LICENSE  README.md  capstone_stub.py  pyproject.toml
bytetrace/: __init__.py  version.py
bytetrace/cfg/: __init__.py  graph.py
bytetrace/cli/: backup1_main.py  backup2_main.py  backup3_main.py  main.py  options.py
bytetrace/cli/commands/: backup_disasm.py  cfg.py  disasm.py  hexdump.py  info.py  sections.py  strings.py  symbols.py  version.py
bytetrace/core/: hexdump.py  strings.py
bytetrace/disasm/: __init__.py  engine.py
bytetrace/explain/: __init__.py  explainer.py  patterns.py
bytetrace/formats/: __init__.py  base.py  elf.py
bytetrace/output/: backup_tables.py  console.py  tables.py
