[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bytetrace"
version = "0.1.0"
description = "A modern, educational binary analysis CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ByteTrace Contributors" }
]
keywords = ["binary", "reverse-engineering", "elf", "disassembly", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyelftools>=0.31",
    "capstone>=5.0",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hatch>=1.7",
]

[project.scripts]
bytetrace = "bytetrace.cli.main:cli"

[project.entry-points."bytetrace.plugins"]
# First-party plugins register here

[tool.hatch.build.targets.wheel]
packages = ["bytetrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["bytetrace"]
omit = ["tests/*"]
